tests/baselines/reference/parserES5ForOfStatement5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ForOfStatement5.ts(1,10): error TS2483: The left-hand side of a 'for...of' statement cannot use a type annotation.
parserES5ForOfStatement5.ts(1,23): error TS2304: Cannot find name 'X'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ForOfStatement5.ts (2 errors) ====
    for (var a: number of X) {
             ~
!!! error TS2483: The left-hand side of a 'for...of' statement cannot use a type annotation.
                          ~
!!! error TS2304: Cannot find name 'X'.
    }